<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mindvision_camera</name>
  <version>0.0.0</version>
  <description>From RM, PHX made, let the mindvision cameras config and send images for further processing</description>
  <maintainer email="3030125110@qq.com">mao</maintainer>
  <license>PHX</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>

  <depend>rclcpp_components</depend>
  <depend>rclcpp</depend>
  <depend>libopencv-dev</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
